# bpma-bookings

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: __init__.py  bookings.py  gcal.py  handler.py  increment.py  run.py  scrape.py
src/eval/: data.py  run.py
src/extract/: google_.py  openai_.py
tests/: __init__.py  test_gcal.py  test_run.py
utils/: push_ssm.py
